--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,7 +477,7 @@ section {
 }
 #about .about-container .background {
   min-height: 300px;
-  background: url(../img/itik\ draft.png) center top no-repeat;
+  background: url(../Img/Itik-draft.png) center top no-repeat;
   margin-bottom: 10px;
   background-position: center;
   background-size: 500px 550px;
