--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../Img/itik-draft.PNG) top center no-repeat;
+  background: url(/assets/img/itik\ draft.png) top center no-repeat;
   background-size: cover;
   position: relative;
   background-position: center;
@@ -477,7 +477,7 @@ section {
 }
 #about .about-container .background {
   min-height: 300px;
-  background: url(../Img/itik-draft.PNG) center top no-repeat;
+  background: url(/assets/img/itik\ draft.png) center top no-repeat;
   margin-bottom: 10px;
   background-position: center;
   background-size: 500px 550px;
