--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,6 +322,8 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background: url(/assets/img/itik\ draft.png) top center no-repeat;
+
+
   background-size: cover;
   position: relative;
   background-position: center;
@@ -335,13 +337,9 @@ h1, h2, h3, h4, h5, h6 {
 #hero:before {
   content: "";
   background: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
+  background: url(../img/itik-draft.PNG) top center no-repeat;
 }
-#hero .hero-container {
+ .hero-container {
   position: absolute;
   bottom: 0;
   top: 0;
@@ -477,7 +475,7 @@ section {
 }
 #about .about-container .background {
   min-height: 300px;
-  background: url(/assets/img/itik\ draft.png) center top no-repeat;
+  background: url(/asse/assets/img/itik\ draft.png) center top no-repeat;
   margin-bottom: 10px;
   background-position: center;
   background-size: 500px 550px;
