--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(/assets/img/itik\ draft.png) top center no-repeat;
+  background: url(../img/itik-draft.PNG) top center no-repeat;
 
 
   background-size: cover;
